--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
+bcrypt==3.2.0
+cffi==1.15.0
 click==8.0.3
+dnspython==2.1.0
 Flask==2.0.2
+gunicorn==20.1.0
 itsdangerous==2.0.1
-Jinja2==3.0.3
+Jinja2==3.0.2
 MarkupSafe==2.0.1
+pycparser==2.20
+pymongo==3.12.1
+python-dateutil==2.8.2
+python-dotenv==0.19.1
+six==1.16.0
 Werkzeug==2.0.2
